--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,400;1,500&display=swap');
+@import "normalize.css";
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,400;1,500&display=swap");
 
 body {
-  font-family: Roboto, sans-serif;
+  font-family: Roboto, serif;
   font-weight: 400;
   font-size: 1.2rem;
   max-width: 90ch;
@@ -46,4 +47,8 @@ table + table {
 .verse {
   text-align: center;
   font-style: italic;
+}
+
+dt {
+  margin-top: 1rem;
 }
